--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="emoji">📸</div>
                 <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gradient">Remember When...</h2>
                 <div class="bg-gradient-to-r from-pink-200 to-rose-200 rounded-xl p-8 mb-8 flex flex-col justify-center items-center">
-                    <img src="/Screenshot_20251227-103335.jpg" height="200" width="200" alt="" srcset="">
+                    <img src="lk.jpg" height="200" width="200" alt="" srcset="">
                     <p class="text-lg text-gray-700 italic mt-2">(Aapko yaad hai hamari pahli mulakat)</p>
                 </div>
                 <p class="text-lg text-gray-700 mb-6">
@@ -478,5 +478,6 @@
         updateProgressBar();
     </script>
 </body>
+
 
 </html>
